wellesleynet/roles/k8s/files/redlib.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redlib
  name: redlib
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redlib
  template:
    metadata:
      labels:
        app: redlib
    spec:
      containers:
      # No idea what version this is
      - image: quay.io/redlib/redlib@sha256:d04e722091fe17424425499882a548507a70654f37aaf8cbc71081ef29b7b341
        imagePullPolicy: Always
        name: redlib
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: redlib
spec:
  selector:
    app: redlib
  ports:
  - name: redlib
    port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redlib
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: r.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redlib
            port:
              number: 8080
  - host: reddit.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redlib
            port:
              number: 8080
  - host: redlib.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redlib
            port:
              number: 8080
  tls:
  - hosts:
    - r.kiski.co
    secretName: r-kiski-co-tls
  - hosts:
    - reddit.kiski.co
    secretName: reddit-kiski-co-tls
  - hosts:
    - redlib.kiski.co
    secretName: redlib-kiski-co-tls
